--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     grid-template-columns: 150px 200px 350px 580px 80px 50px;">
 
       <div class="logo" style="margin-left:10px;">
-        <a href="https://467bfba8-a0f1-4029-acd5-79a48bdf10fa-00-151bq66loy5q3.pike.replit.dev/" target="_blank">
+        <a href="https://abhi017z.github.io/movie-website/" target="_blank">
           <img src="cine1.png" width="80px" height="80px"></a>
       </div>
       <div>
